@@ -1,2 +1,6 @@
 Literal included this should **not** be *marked* `up`.
 	<- leading raw tab.
+
+Newlines
+are
+normalized.
